--- a/DatabaseLibrary/DatabaseLibrary.csproj
+++ b/DatabaseLibrary/DatabaseLibrary.csproj
@@ -50,18 +50,22 @@
     <Compile Include="DataModel.cs" />
     <Compile Include="DataProperty.cs" />
     <Compile Include="Data\AddditionalClientInfoData.cs" />
+    <Compile Include="Data\ArchiveData.cs" />
     <Compile Include="Data\ClientData.cs" />
     <Compile Include="Data\CommonData.cs" />
     <Compile Include="Data\PositionData.cs" />
     <Compile Include="Data\RequestData.cs" />
     <Compile Include="Data\RequestTypeData.cs" />
+    <Compile Include="Data\RoleData.cs" />
     <Compile Include="Data\ServiceData.cs" />
     <Compile Include="Data\UserData.cs" />
     <Compile Include="Models\AddditionalClientInfoModel.cs" />
+    <Compile Include="Models\ArchiveModel.cs" />
     <Compile Include="Models\ClientModel.cs" />
     <Compile Include="Models\PositionModel.cs" />
     <Compile Include="Models\RequestModel.cs" />
     <Compile Include="Models\RequestTypeModel.cs" />
+    <Compile Include="Models\RoleModel.cs" />
     <Compile Include="Models\ServiceModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="OtherProperty.cs" />
