--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -48,8 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\SQLEnums.cs" />
+    <Compile Include="Methods\GenericMethods.cs" />
     <Compile Include="Methods\MessageBoxImplementation.cs" />
     <Compile Include="Models\ConstValues.cs" />
+    <Compile Include="Models\IClosableUI.cs" />
     <Compile Include="Models\SettingsModel.cs" />
     <Compile Include="Methods\SettingsMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
