--- a/Client/AppSettings.json
+++ b/Client/AppSettings.json
@@ -1,6 +1,7 @@
 {
-  "Provider": "Microsoft.Jet.OLEDB.4.0;",
-  "DataSource": "C:\\Users\\Admin\\Documents\\Programming\\work\\DSTU\\Курсовые\\Сапега\\advertice.mdb",
+  "Provider": "Microsoft.ACE.OLEDB.12.0;",
+  "DataSource": "C:\\Users\\Admin\\Documents\\Programming\\C#\\AdvertisingAgency\\Client\\bin\\Debug\\advertice.mdb",
+  "Password": "admin",
   "HideBorderMenu": true,
   "RestoreBorderMenu": true,
   "ShowAdditionalInfo": false,
